--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-runtime": "^6.25.0",
     "graphql": "^0.12.3",
+    "graphql-type-json": "^0.2.0",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.8.4",
     "json-schema-ref-parser": "^3.1.2",
