--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "bin": "./bin/swagger2graphql",
   "dependencies": {
     "babel-runtime": "^6.25.0",
-    "graphql": "^0.13.1",
-    "graphql-type-json": "^0.2.0",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.8.4",
     "json-schema-ref-parser": "^3.1.2",
@@ -15,6 +13,10 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "yargs": "^8.0.2"
+  },
+  "peerDependencies": {
+    "graphql": "^0.13.1",
+    "graphql-type-json": "^0.2.0",
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
